now all i need is to finalize the project sec

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="menuContainer">
-        <nav> 
+        <nav>
             <a class="menuMob"><i class="fa-solid fa-bars"></i></a>
             <img src="images/logo.png" class="logo">
             <ul>
@@ -35,8 +35,7 @@
             <li><a href="./Career">Career</a></li>
             <li><a href="./Contact">Contact</a></li>
         </ul>
-        <a href="images/RESUME.pdf" download class="resumeDownMob">Resume &nbsp; <i
-            class="fa-solid fa-download"></i>
+        <a href="images/RESUME.pdf" download class="resumeDownMob">Resume &nbsp; <i class="fa-solid fa-download"></i>
         </a>
         <div id="bubbles">
         </div>
@@ -50,7 +49,7 @@
     </div>
 
     <!---------------about----------------------->
-    <div id="About" >
+    <div id="About">
         <div class="Abtcontainer">
             <div class="row hidden">
                 <div class="about-col-1">
@@ -95,78 +94,69 @@
     </div>
     <!-------------Portfolio------------->
     <div class="proCont">
+        <h1 class="servHeader">Projects</h1>
+        <div class="projectContainer">
 
-    
-    <h1 class="servHeader">Projects</h1>
-    <div class="projectContainer">
-        <div class="item item1 hidden2">
-            <h1>Wind Turbine</h1>
-            <img id="windT" src="images/projects/windTurbine.png"/>
-            <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs 
-                h adsljkfh jkladsh fjkladsh fjkladsh fjkladsh flkjads hfkljadsh fljkadsh fadjkls hfkladjs
-                adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf 
-            </p>
+            <div class="item item1 hidden2">
+                <h1>Wind Turbine</h1>
+                <img id="windT" src="images/projects/windTurbine.png" />
+                <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs
+                    h adsljkfh jkladsh fjkladsh fjkladsh fjkladsh flkjads hfkljadsh fljkadsh fadjkls hfkladjs
+                    adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf
+                </p>
+            </div>
+            <div class="nothing"></div>
+            <div class="nothing"></div>
+            <div class="item item2 hidden2">
+                <h1>AR Webapp</h1>
+                <img id="windT" src="images/projects/AR-Webapp.png" />
+                <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs
+                    h adsljkfh jkladsh fjkladsh fjkladsh fjkladsh flkjads hfkljadsh fljkadsh fadjkls hfkladjs
+                    adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf
+                </p>
+            </div>
+            <div class="item item3 hidden2">
+                <h1>Website</h1>
+                <img id="windT" src="images/projects/WP-Site_lcrsports.png" />
+                <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs
+                    h adsljkfh jkladsh fjkladsh fjkladsh fjkladsh flkjads hfkljadsh fljkadsh fadjkls hfkladjs
+                    adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf
+                </p>
+            </div>
+            <div class="nothing"></div>
+            <div class="nothing"></div>
+            <div class="item item2 hidden2">
+                <h1>AR Webapp</h1>
+                <img id="windT" src="images/projects/AR-Webapp.png" />
+                <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs
+                    h adsljkfh jkladsh fjkladsh fjkladsh fjkladsh flkjads hfkljadsh fljkadsh fadjkls hfkladjs
+                    adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf
+                </p>
+            </div>
         </div>
-        <div class="nothing"></div>
-        <div class="nothing"></div>
-        <div class="item item2 hidden2">
-            <h1>AR Webapp</h1>
-            <img id="windT" src="images/projects/AR-Webapp.png"/>
-            <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs 
-                h adsljkfh jkladsh fjkladsh fjkladsh fjkladsh flkjads hfkljadsh fljkadsh fadjkls hfkladjs
-                adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf 
-            </p>
-        </div>
-        <div class="item item3 hidden2">
-            <h1>Website</h1>
-            <img id="windT" src="images/projects/WP-Site_lcrsports.png"/>
-            <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs 
-                h adsljkfh jkladsh fjkladsh fjkladsh fjkladsh flkjads hfkljadsh fljkadsh fadjkls hfkladjs
-                adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf 
-            </p>
-        </div>
-        <div class="nothing"></div>
-        <div class="nothing"></div>
-        <div class="item item2 hidden2">
-            <h1>AR Webapp</h1>
-            <img id="windT" src="images/projects/AR-Webapp.png"/>
-            <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs 
-                h adsljkfh jkladsh fjkladsh fjkladsh fjkladsh flkjads hfkljadsh fljkadsh fadjkls hfkladjs
-                adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf 
-            </p>
-        </div>
-    </div>
+        <a href="/Projects" class="btn">Explore</a>
     </div>
     <!-------------Contact------------->
     <div class="contact">
         <div class="container">
             <div class="row">
                 <div class="contact-left">
-                    <h1 class="sub-title">Contact Me</h1>
+                    <h1 class="sub-title"><a href="/Contact" class="conLab">Contact Me</a></h1>
                     <p><i class="fa-solid fa-paper-plane"></i> Mtzaxl23@gmail.com</p>
-                    <div class="social-icons">
-                        <a href="https://github.com/martinea23"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://www.instagram.com/axl_mtz04"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/axlmtz/"><i class="fa-brands fa-linkedin"></i></a>
-                    </div>
-                    <a href="images/RESUME.pdf" download class="btn btn2">Download Resume</a>
+                </div>
+                <div class="social-icons">
+                    <a href="https://github.com/martinea23"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.instagram.com/axl_mtz04"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/axlmtz/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <div class="contact-right">
-                    <h1 class="sub-title">Message Me</h1>
-                    <form name="submit-to-google-sheet">
-                        <input type="text" name="Name" placeholder="Your Name" required>
-                        <input type="email" name="Email" placeholder="Your Email" required>
-                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                        <button type="submit" class="btn">Send</button>
-                    </form>
-                    <span id="msg"></span>
+                    <a href="images/RESUME.pdf" download class="conBtn">Download Resume</a>
                 </div>
             </div>
         </div>
     </div>
     <!----Scripts---->
     <script src="Scripts/menuLightup.js"></script>
-    <script src="Scripts/messageForm.js"></script>
     <script src="Scripts/mobileMenu.js"></script>
     <script src="Scripts/bgMoves.js"></script>
     <script src="Scripts/Observer.js"></script>
