did the bkg mover brake it?

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <!----Scripts---->
     <script src="Scripts/menuLightup.js"></script>
     <script src="Scripts/mobileMenu.js"></script>
-    <script src="Scripts/bgMoves.js"></script>
+    <!-- <script src="Scripts/bgMoves.js"></script> -->
     <script src="Scripts/Observer.js"></script>
 </body>
 
