--- a/index.html
+++ b/index.html
@@ -51,47 +51,119 @@
     <!---------------about----------------------->
     <div id="About">
         <div class="Abtcontainer">
+            <h1 class="subtitle">About Me</h1>
             <div class="row hidden">
+
                 <div class="about-col-1">
                     <img id="axlBird" src="images/Axl_birds.JPG">
                 </div>
+
+
                 <div class="about-col-2">
-                    <h1 class="subtitle">About Me</h1>
                     <p class="abtText">
                         Hello, I'm Axl Martinez, a passionate computer scientist and creative problem solver.
                     </p>
+                    <div class="education">
+                        <div class="eduTittle">
+                            <h1>Education</h1>
+                        </div>
+                        <div class="univEdu">
+                            <i class="fa-solid fa-graduation-cap"></i>
+                            <p>University of Portland</p>
+                        </div>
+                        <p class="deg">B.S Computer Science</p>
+                        <div class="CCEdu">
+                            <i class="fa-solid fa-building-columns"></i>
+                            <p>Central Catholic High School</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h1 class="eduTittle">Skills</h1>
+            <div class="skills">
+                <div class="skillBox">
+                    <div class="skillTitle">
+                        <div class="imgCont">
+                            <img class="img" src="images/html5.png">
+                        </div>
+                        <h3>HTML 5</h3>
+                    </div>
+                    <p>hdsahjklfhadjklshf asdjkh fkladjsh fkjladshf jklashd fjklh asdkj
+                        hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
+                    </p>
+                </div>
+                <div class="skillBox">
+                    <div class="skillTitle">
+                        <div class="imgCont">
+                            <img class="img" src="images/css.png">
+                        </div>
+                        <h3>CSS 3</h3>
+                    </div>
+                    <p>hdsahjklfhadjklshf asdjkh fkladjsh fkjladshf jklashd fjklh asdkj
+                        hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
+                    </p>
+                </div>
+                <div class="skillBox">
+                    <div class="skillTitle">
+                        <div class="imgCont">
+                            <img class="img" src="images/js.png">
+                        </div>
+                        <h3>JavaScript</h3>
+                    </div>
+                    <p>hdsahjklfhadjklshf asdjkh fkladjsh fkjladshf jklashd fjklh asdkj
+                        hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
+                    </p>
+                </div>
+                <div class="skillBox">
+                    <div class="skillTitle">
+                        <div class="imgCont">
+                            <img class="img" src="images/github.png">
+                        </div>
+                        <h3>Github</h3>
+                    </div>
+                    <p>hdsahjklfhadjklshf asdjkh fkladjsh fkjladshf jklashd fjklh asdkj
+                        hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
+                    </p>
+                </div>
+                <div class="skillBox">
+                    <div class="skillTitle">
+                        <div class="imgCont">
+                            <img class="img" src="images/java.png">
+                        </div>
+                        <h3>Java</h3>
+                    </div>
+                    <p>hdsahjklfhadjklshf asdjkh fkladjsh fkjladshf jklashd fjklh asdkj
+                        hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
+                    </p>
+                </div>
+                <div class="skillBox">
+                    <div class="skillTitle">
+                        <div class="imgCont">
+                            <img class="img" src="images/react.png">
+                        </div>
+                        <h3>React</h3>
+                    </div>
+                    <p>hdsahjklfhadjklshf asdjkh fkladjsh fkjladshf jklashd fjklh asdkj
+                        hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
+                    </p>
+                </div>
+                <div class="skillBox">
+                    <div class="skillTitle">
+                        <div class="imgCont">
+                            <img class="img" src="images/fireB.png">
+                        </div>
+                        <h3>FireBase</h3>
+                    </div>
+                    <p>hdsahjklfhadjklshf asdjkh fkladjsh fkjladshf jklashd fjklh asdkj
+                        hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
+                    </p>
+                </div>
+            </div>
+            <a href="./About" class="btn">Read More</a>
+        </div>
+    </div>
+    <!---------------Career----------------------->
 
-                    <a href="./About" class="btn">Read More</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-----------Services------------>
-    <div class="services">
-        <div class="container">
-            <h1 class="servHeader">My Services</h1>
-            <div class="services-list">
-                <div class="serv hidden3">
-                    <i class="fa-solid fa-code"></i>
-                    <h2>Web Design</h2>
-                    <p>Online Presence Through Websites!</p>
-                    <a href="#">Learn More</a>
-                </div>
-                <div class="serv hidden3">
-                    <i class="fa-brands fa-app-store"></i>
-                    <h2>App Design</h2>
-                    <p>Mobile APP Development</p>
-                    <a href="#">Learn More</a>
-                </div>
-                <div class="serv hidden3">
-                    <i class="fa-solid fa-video"></i>
-                    <h2>Video/Photo Editing</h2>
-                    <p>Get the Best From Your Content</p>
-                    <a href="#">Learn More</a>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-------------Portfolio------------->
     <div class="proCont">
         <h1 class="servHeader">Projects</h1>
@@ -135,6 +207,32 @@
             </div>
         </div>
         <a href="/Projects" class="btn">Explore</a>
+    </div>
+    <!-----------Services------------>
+    <div class="services">
+        <div class="container">
+            <h1 class="servHeader">My Services</h1>
+            <div class="services-list">
+                <div class="serv hidden3">
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Web Design</h2>
+                    <p>Online Presence Through Websites!</p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div class="serv hidden3">
+                    <i class="fa-brands fa-app-store"></i>
+                    <h2>App Design</h2>
+                    <p>Mobile APP Development</p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div class="serv hidden3">
+                    <i class="fa-solid fa-video"></i>
+                    <h2>Video/Photo Editing</h2>
+                    <p>Get the Best From Your Content</p>
+                    <a href="#">Learn More</a>
+                </div>
+            </div>
+        </div>
     </div>
     <!-------------Contact------------->
     <div class="contact">
