--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
             <h1 class="eduTittle">Skills</h1>
             <div class="skills">
-                <div class="skillBox">
+                <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
                             <img class="img" src="images/html5.png">
@@ -92,7 +92,7 @@
                         hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
                     </p>
                 </div>
-                <div class="skillBox">
+                <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
                             <img class="img" src="images/css.png">
@@ -103,7 +103,7 @@
                         hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
                     </p>
                 </div>
-                <div class="skillBox">
+                <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
                             <img class="img" src="images/js.png">
@@ -114,7 +114,7 @@
                         hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
                     </p>
                 </div>
-                <div class="skillBox">
+                <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
                             <img class="img" src="images/github.png">
@@ -125,7 +125,7 @@
                         hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
                     </p>
                 </div>
-                <div class="skillBox">
+                <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
                             <img class="img" src="images/java.png">
@@ -136,7 +136,7 @@
                         hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
                     </p>
                 </div>
-                <div class="skillBox">
+                <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
                             <img class="img" src="images/react.png">
@@ -147,12 +147,23 @@
                         hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
                     </p>
                 </div>
-                <div class="skillBox">
+                <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
                             <img class="img" src="images/fireB.png">
                         </div>
                         <h3>FireBase</h3>
+                    </div>
+                    <p>hdsahjklfhadjklshf asdjkh fkladjsh fkjladshf jklashd fjklh asdkj
+                        hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
+                    </p>
+                </div>
+                <div class="skillBox hidden2">
+                    <div class="skillTitle">
+                        <div class="imgCont">
+                            <img class="img" src="images/wp.png">
+                        </div>
+                        <h3>Word Press</h3>
                     </div>
                     <p>hdsahjklfhadjklshf asdjkh fkladjsh fkjladshf jklashd fjklh asdkj
                         hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
