--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     <div id="About">
         <div class="Abtcontainer">
             <h1 class="subtitle">About Me</h1>
+            <p class="abtText">
+                Hello, I'm Axl Martinez, a passionate computer scientist and creative problem solver.
+            </p>
             <div class="row hidden">
 
                 <div class="about-col-1">
@@ -60,9 +63,6 @@
 
 
                 <div class="about-col-2">
-                    <p class="abtText">
-                        Hello, I'm Axl Martinez, a passionate computer scientist and creative problem solver.
-                    </p>
                     <div class="education">
                         <div class="eduTittle">
                             <h1>Education</h1>
@@ -164,6 +164,17 @@
                             <img class="img" src="images/wp.png">
                         </div>
                         <h3>Word Press</h3>
+                    </div>
+                    <p>hdsahjklfhadjklshf asdjkh fkladjsh fkjladshf jklashd fjklh asdkj
+                        hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
+                    </p>
+                </div>
+                <div class="skillBox hidden2">
+                    <div class="skillTitle">
+                        <div class="imgCont">
+                            <img class="img" src="images/Swift.png">
+                        </div>
+                        <h3>Swift</h3>
                     </div>
                     <p>hdsahjklfhadjklshf asdjkh fkladjsh fkjladshf jklashd fjklh asdkj
                         hjfasdklhfjklads fhjadsjkl fhadjksl hfkajlsd hfkjasd
