--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
                         </div>
                         <div class="univEdu">
                             <i class="fa-solid fa-graduation-cap"></i>
-                            <p>University of Portland</p>
+                            <p>University of Portland '23</p>
                         </div>
                         <p class="deg">B.S Computer Science</p>
                         <div class="CCEdu">
                             <i class="fa-solid fa-building-columns"></i>
-                            <p>Central Catholic High School</p>
+                            <p>Central Catholic '19</p>
                         </div>
+                        <p class="deg">H.S Diploma</p>
                     </div>
                 </div>
             </div>
@@ -259,7 +260,7 @@
     <!-------------Contact------------->
     <div class="contact">
         <div class="container">
-            <div class="row">
+            <div class="Conrow">
                 <div class="contact-left">
                     <h1 class="sub-title"><a href="/Contact" class="conLab">Contact Me</a></h1>
                     <p><i class="fa-solid fa-paper-plane"></i> Mtzaxl23@gmail.com</p>
