making the project click take you to github

--- a/index.html
+++ b/index.html
@@ -191,31 +191,28 @@
     <div class="proCont">
         <h1 class="servHeader">Projects</h1>
         <div class="projectContainer">
+            <a href="" class="proContain">
+                <div class="item item1 hidden2">
 
-            <div class="item item1 hidden2">
-                <h1>Wind Turbine</h1>
-                <img id="windT" src="images/projects/windTurbine.png" />
-                <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs
-                    h adsljkfh jkladsh fjkladsh fjkladsh fjkladsh flkjads hfkljadsh fljkadsh fadjkls hfkladjs
-                    adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf
-                </p>
-            </div>
+                    <h1>Wind Turbine</h1>
+                    <img id="windT" src="images/projects/windTurbine.png" />
+                    <p>
+                    </p>
+                </div>
+            </a>
+
             <div class="nothing"></div>
             <div class="nothing"></div>
             <div class="item item2 hidden2">
                 <h1>AR Webapp</h1>
                 <img id="windT" src="images/projects/AR-Webapp.png" />
-                <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs
-                    h adsljkfh jkladsh fjkladsh fjkladsh fjkladsh flkjads hfkljadsh fljkadsh fadjkls hfkladjs
-                    adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf
+                <p>
                 </p>
             </div>
             <div class="item item3 hidden2">
                 <h1>Website</h1>
                 <img id="windT" src="images/projects/WP-Site_lcrsports.png" />
-                <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs
-                    h adsljkfh jkladsh fjkladsh fjkladsh fjkladsh flkjads hfkljadsh fljkadsh fadjkls hfkladjs
-                    adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf
+                <p>
                 </p>
             </div>
             <div class="nothing"></div>
@@ -223,9 +220,7 @@
             <div class="item item2 hidden2">
                 <h1>AR Webapp</h1>
                 <img id="windT" src="images/projects/AR-Webapp.png" />
-                <p> dhjsafkl;fhjas ;fhjads ;kljfhjkoadlshfjklads hfjkladsh adfklsh fkljashd flkjadhs
-                    h adsljkfh jkladsh fjkladsh fjkladsh fjkladsh flkjads hfkljadsh fljkadsh fadjkls hfkladjs
-                    adhsjkf hadklsjh fadsjh flkjadsh fjkladsh fjkasdh flaksdjh faljksdh fajklsdh ajkdhsf
+                <p>
                 </p>
             </div>
         </div>
