finalizing the project section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
-                            <img class="img" src="images/html5.png">
+                            <img class="img" src="images/Logos/html5.png">
                         </div>
                         <h3>HTML 5</h3>
                     </div>
@@ -96,7 +96,7 @@
                 <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
-                            <img class="img" src="images/css.png">
+                            <img class="img" src="images/Logos/css.png">
                         </div>
                         <h3>CSS 3</h3>
                     </div>
@@ -107,7 +107,7 @@
                 <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
-                            <img class="img" src="images/js.png">
+                            <img class="img" src="images/Logos/js.png">
                         </div>
                         <h3>JavaScript</h3>
                     </div>
@@ -118,7 +118,7 @@
                 <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
-                            <img class="img" src="images/github.png">
+                            <img class="img" src="images/Logos/github.png">
                         </div>
                         <h3>Github</h3>
                     </div>
@@ -129,7 +129,7 @@
                 <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
-                            <img class="img" src="images/java.png">
+                            <img class="img" src="images/Logos/java.png">
                         </div>
                         <h3>Java</h3>
                     </div>
@@ -140,7 +140,7 @@
                 <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
-                            <img class="img" src="images/react.png">
+                            <img class="img" src="images/Logos/react.png">
                         </div>
                         <h3>React</h3>
                     </div>
@@ -151,7 +151,7 @@
                 <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
-                            <img class="img" src="images/fireB.png">
+                            <img class="img" src="images/Logos/fireB.png">
                         </div>
                         <h3>FireBase</h3>
                     </div>
@@ -162,7 +162,7 @@
                 <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
-                            <img class="img" src="images/wp.png">
+                            <img class="img" src="images/Logos/wp.png">
                         </div>
                         <h3>Word Press</h3>
                     </div>
@@ -173,7 +173,7 @@
                 <div class="skillBox hidden2">
                     <div class="skillTitle">
                         <div class="imgCont">
-                            <img class="img" src="images/Swift.png">
+                            <img class="img" src="images/Logos/Swift.png">
                         </div>
                         <h3>Swift</h3>
                     </div>
@@ -193,36 +193,127 @@
         <div class="projectContainer">
             <a href="" class="proContain">
                 <div class="item item1 hidden2">
-
                     <h1>Wind Turbine</h1>
                     <img id="windT" src="images/projects/windTurbine.png" />
+                    <div class="skillUsedCon">
+                        <img id="skillUsed" src="images/Logos/C++.png" />
+                        <img id="skillUsed" src="images/Logos/solidWorks.png">
+                        <img id="skillUsed" src="images/Logos/arduino.png" />
+                    </div>
                     <p>
+                        skljf;alsfkj;flskd\sfdls;dfkg fsdjgl;ksdfng sdfngjsk;ldfgn;lksdnfjgl kgfdskjlgkls
+                        gfdsjklgn fgfsd;kjgnklsdnf glsgfdl;kngkslng dl;
                     </p>
                 </div>
             </a>
 
             <div class="nothing"></div>
             <div class="nothing"></div>
-            <div class="item item2 hidden2">
-                <h1>AR Webapp</h1>
-                <img id="windT" src="images/projects/AR-Webapp.png" />
-                <p>
-                </p>
-            </div>
-            <div class="item item3 hidden2">
-                <h1>Website</h1>
-                <img id="windT" src="images/projects/WP-Site_lcrsports.png" />
-                <p>
-                </p>
-            </div>
+
+            <a href="" class="proContain">
+                <div class="item item1 hidden2">
+                    <h1>AR Web App</h1>
+                    <img id="windT" src="images/projects/AR-Webapp.png" />
+                    <div class="skillUsedCon">
+                        <img id="skillUsed" src="images/Logos/html5.png" />
+                        <img id="skillUsed" src="images/Logos/js.png">
+                        <img id="skillUsed" src="images/Logos/d3.png">
+                        <img id="skillUsed" src="images/Logos/aframe.png">
+                    </div>
+                    <p>
+                        skljf;alsfkj;flskd\sfdls;dfkg fsdjgl;ksdfng sdfngjsk;ldfgn;lksdnfjgl kgfdskjlgkls
+                        gfdsjklgn fgfsd;kjgnklsdnf glsgfdl;kngkslng dl;
+                    </p>
+                </div>
+            </a>
+
             <div class="nothing"></div>
             <div class="nothing"></div>
-            <div class="item item2 hidden2">
-                <h1>AR Webapp</h1>
-                <img id="windT" src="images/projects/AR-Webapp.png" />
-                <p>
-                </p>
-            </div>
+            <a href="" class="proContain">
+                <div class="item item1 hidden2">
+                    <h1>RP Sports Site</h1>
+                    <img id="windT" src="images/projects/WP-Site_lcrsports.png" />
+                    <div class="skillUsedCon">
+                        <img id="skillUsed" src="images/Logos/wp.png" />
+                    </div>
+                    <p>
+                        skljf;alsfkj;flskd\sfdls;dfkg fsdjgl;ksdfng sdfngjsk;ldfgn;lksdnfjgl kgfdskjlgkls
+                        gfdsjklgn fgfsd;kjgnklsdnf glsgfdl;kngkslng dl;
+                    </p>
+                </div>
+            </a>
+
+            <div class="nothing"></div>
+            <div class="nothing"></div>
+
+            <a href="" class="proContain">
+                <div class="item item1 hidden2">
+                    <h1>Show Case</h1>
+                    <img id="windT" src="images/projects/" />
+                    <div class="skillUsedCon">
+                        <img id="skillUsed" src="images/Logos/react.png" />
+                        <img id="skillUsed" src="images/Logos/fireB.png" />
+                        <img id="skillUsed" src="images/Logos/js.png" />
+                        <img id="skillUsed" src="images/Logos/html5.png" />
+                        <img id="skillUsed" src="images/Logos/js.png" />
+                    </div>
+                    <p>
+                        skljf;alsfkj;flskd\sfdls;dfkg fsdjgl;ksdfng sdfngjsk;ldfgn;lksdnfjgl kgfdskjlgkls
+                        gfdsjklgn fgfsd;kjgnklsdnf glsgfdl;kngkslng dl;
+                    </p>
+                </div>
+            </a>
+            <a href="" class="proContain">
+                <div class="item item1 hidden2">
+                    <h1>Space Invader</h1>
+                    <img id="windT" src="images/projects/" />
+                    <div class="skillUsedCon">
+                        <img id="skillUsed" src="images/Logos/swift.png" />
+                        <img id="skillUsed" src="images/Logos/Xcode.png" />
+                    </div>
+                    <p>
+                        skljf;alsfkj;flskd\sfdls;dfkg fsdjgl;ksdfng sdfngjsk;ldfgn;lksdnfjgl kgfdskjlgkls
+                        gfdsjklgn fgfsd;kjgnklsdnf glsgfdl;kngkslng dl;
+                    </p>
+                </div>
+            </a>
+
+            <div class="nothing"></div>
+            <div class="nothing"></div>
+
+            <a href="" class="proContain">
+                <div class="item item1 hidden2">
+                    <h1>IoT Ball</h1>
+                    <img id="windT" src="images/projects/" />
+                    <div class="skillUsedCon">
+                        <img id="skillUsed" src="images/Logos/c++.png" />
+                        <img id="skillUsed" src="images/Logos/fireB.png" />
+                        <img id="skillUsed" src="images/Logos/arduino.png" />
+                    </div>
+                    <p>
+                        skljf;alsfkj;flskd\sfdls;dfkg fsdjgl;ksdfng sdfngjsk;ldfgn;lksdnfjgl kgfdskjlgkls
+                        gfdsjklgn fgfsd;kjgnklsdnf glsgfdl;kngkslng dl;
+                    </p>
+                </div>
+            </a>
+
+            <a href="" class="proContain">
+                <div class="item item1 hidden2">
+                    <h1>OHSU Diagnosis App</h1>
+                    <img id="windT" src="images/projects/" />
+                    <div class="skillUsedCon">
+                        <img id="skillUsed" src="images/Logos/react.png" />
+                        <img id="skillUsed" src="images/Logos/mySql.png" />
+                        <img id="skillUsed" src="images/Logos/html5.png" />
+                        <img id="skillUsed" src="images/Logos/js.png" />
+
+                    </div>
+                    <p>
+                        skljf;alsfkj;flskd\sfdls;dfkg fsdjgl;ksdfng sdfngjsk;ldfgn;lksdnfjgl kgfdskjlgkls
+                        gfdsjklgn fgfsd;kjgnklsdnf glsgfdl;kngkslng dl;
+                    </p>
+                </div>
+            </a>
         </div>
         <a href="/Projects" class="btn">Explore</a>
     </div>
