almost done with full functionality

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <img src="images/logo.png" class="logo">
             <ul>
                 <li><a href="./" class="active">Home</a></li>
-                <li><a href="./About">About</a></li>
-                <li><a href="./Projects">Projects</a></li>
-                <li><a href="./Career">Career</a></li>
+                <li><a href="#About">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#services">Services</a></li>
                 <li><a href="./Contact">Contact</a></li>
             </ul>
             <a href="images/RESUME.pdf" download class="resumeDown">Resume &nbsp; <i
@@ -188,7 +188,7 @@
     <!---------------Career----------------------->
 
     <!-------------Portfolio------------->
-    <div class="proCont">
+    <div class="proCont" id="projects">
         <h1 class="servHeader">Projects</h1>
         <div class="projectContainer">
             <a href="" class="proContain">
@@ -201,8 +201,8 @@
                         <img id="skillUsed" src="images/Logos/arduino.png" />
                     </div>
                     <p>
-                        skljf;alsfkj;flskd\sfdls;dfkg fsdjgl;ksdfng sdfngjsk;ldfgn;lksdnfjgl kgfdskjlgkls
-                        gfdsjklgn fgfsd;kjgnklsdnf glsgfdl;kngkslng dl;
+                        Developed a clean energy prototype by utilizing 3D printing technology to fabricate a wind turbine-like structure.  
+                        This innovative project showcases a sustainable approach to clean energy generation.
                     </p>
                 </div>
             </a>
@@ -221,8 +221,8 @@
                         <img id="skillUsed" src="images/Logos/aframe.png">
                     </div>
                     <p>
-                        skljf;alsfkj;flskd\sfdls;dfkg fsdjgl;ksdfng sdfngjsk;ldfgn;lksdnfjgl kgfdskjlgkls
-                        gfdsjklgn fgfsd;kjgnklsdnf glsgfdl;kngkslng dl;
+                        A web application that allowed data to be seen in augmented reality, later on incorporated into a 
+                        bigger project.
                     </p>
                 </div>
             </a>
@@ -237,8 +237,8 @@
                         <img id="skillUsed" src="images/Logos/wp.png" />
                     </div>
                     <p>
-                        skljf;alsfkj;flskd\sfdls;dfkg fsdjgl;ksdfng sdfngjsk;ldfgn;lksdnfjgl kgfdskjlgkls
-                        gfdsjklgn fgfsd;kjgnklsdnf glsgfdl;kngkslng dl;
+                        Collaborated closely with a small sports business client to craft a website 
+                        that perfectly aligned with their vision and needs. 
                     </p>
                 </div>
             </a>
@@ -249,17 +249,15 @@
             <a href="" class="proContain">
                 <div class="item item1 hidden2">
                     <h1>Show Case</h1>
-                    <img id="windT" src="images/projects/" />
+                    <img id="showcase" src="images/projects/perProject.PNG" />
                     <div class="skillUsedCon">
                         <img id="skillUsed" src="images/Logos/react.png" />
                         <img id="skillUsed" src="images/Logos/fireB.png" />
                         <img id="skillUsed" src="images/Logos/js.png" />
                         <img id="skillUsed" src="images/Logos/html5.png" />
-                        <img id="skillUsed" src="images/Logos/js.png" />
                     </div>
                     <p>
-                        skljf;alsfkj;flskd\sfdls;dfkg fsdjgl;ksdfng sdfngjsk;ldfgn;lksdnfjgl kgfdskjlgkls
-                        gfdsjklgn fgfsd;kjgnklsdnf glsgfdl;kngkslng dl;
+                        A Full Stack App, but its a personal project that I will soon be Launching to the app store.
                     </p>
                 </div>
             </a>
@@ -272,8 +270,8 @@
                         <img id="skillUsed" src="images/Logos/Xcode.png" />
                     </div>
                     <p>
-                        skljf;alsfkj;flskd\sfdls;dfkg fsdjgl;ksdfng sdfngjsk;ldfgn;lksdnfjgl kgfdskjlgkls
-                        gfdsjklgn fgfsd;kjgnklsdnf glsgfdl;kngkslng dl;
+                        A simple recreation of the famous space invader game. This included a functioning
+                        Scoreboard and difficulty would increase with time. 
                     </p>
                 </div>
             </a>
@@ -284,20 +282,20 @@
             <a href="" class="proContain">
                 <div class="item item1 hidden2">
                     <h1>IoT Ball</h1>
-                    <img id="windT" src="images/projects/" />
+                    <img id="windT" src="images/projects/IotBall.png" />
                     <div class="skillUsedCon">
                         <img id="skillUsed" src="images/Logos/c++.png" />
                         <img id="skillUsed" src="images/Logos/fireB.png" />
                         <img id="skillUsed" src="images/Logos/arduino.png" />
                     </div>
                     <p>
-                        skljf;alsfkj;flskd\sfdls;dfkg fsdjgl;ksdfng sdfngjsk;ldfgn;lksdnfjgl kgfdskjlgkls
-                        gfdsjklgn fgfsd;kjgnklsdnf glsgfdl;kngkslng dl;
+                        Worked through the design and creation for a prototype of a "smart" ball
+                        capable to display real time data about the ball including speed and the force the ball was striken with.
                     </p>
                 </div>
             </a>
 
-            <a href="" class="proContain">
+            <a href="https://github.com/upcs/cs341-spring-2023-bandage" class="proContain">
                 <div class="item item1 hidden2">
                     <h1>OHSU Diagnosis App</h1>
                     <img id="windT" src="images/projects/" />
@@ -306,11 +304,9 @@
                         <img id="skillUsed" src="images/Logos/mySql.png" />
                         <img id="skillUsed" src="images/Logos/html5.png" />
                         <img id="skillUsed" src="images/Logos/js.png" />
-
                     </div>
                     <p>
-                        skljf;alsfkj;flskd\sfdls;dfkg fsdjgl;ksdfng sdfngjsk;ldfgn;lksdnfjgl kgfdskjlgkls
-                        gfdsjklgn fgfsd;kjgnklsdnf glsgfdl;kngkslng dl;
+                        Worked directly with OHSU Staff to create a mobile application for there website.
                     </p>
                 </div>
             </a>
@@ -318,7 +314,7 @@
         <a href="/Projects" class="btn">Explore</a>
     </div>
     <!-----------Services------------>
-    <div class="services">
+    <div class="services" id="services">
         <div class="container">
             <h1 class="servHeader">My Services</h1>
             <div class="services-list">
