images to projects

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <a href="" class="proContain">
                 <div class="item item1 hidden2">
                     <h1>RP Sports Site</h1>
-                    <img id="windT" src="images/projects/WP-Site_lcrsports.png" />
+                    <img id="wp" src="images/projects/WP-Site_lcrsports.png" />
                     <div class="skillUsedCon">
                         <img id="skillUsed" src="images/Logos/wp.png" />
                     </div>
@@ -266,7 +266,7 @@
             <a href="" class="proContain">
                 <div class="item item1 hidden2">
                     <h1>Space Invader</h1>
-                    <img id="windT" src="images/projects/" />
+                    <img id="space" src="images/projects/spaceINvader.png" />
                     <div class="skillUsedCon">
                         <img id="skillUsed" src="images/Logos/swift.png" />
                         <img id="skillUsed" src="images/Logos/Xcode.png" />
@@ -301,7 +301,7 @@
             <a href="https://github.com/upcs/cs341-spring-2023-bandage" class="proContain">
                 <div class="item item1 hidden2">
                     <h1>OHSU Diagnosis App</h1>
-                    <img id="windT" src="images/projects/" />
+                    <img id="pdx" src="images/projects/pdxDiagnosis.png" />
                     <div class="skillUsedCon">
                         <img id="skillUsed" src="images/Logos/react.png" />
                         <img id="skillUsed" src="images/Logos/mySql.png" />
